fix(Animated 1): realigned elements

--- a/pages/animated1/assets/css/style.css
+++ b/pages/animated1/assets/css/style.css
@@ -59,8 +59,8 @@ section.home {
     color : white;
     font-size: 190px;
     position: absolute;
-    top: 35%;
-    left: 12%;
+    top: 25%;
+    left: center;
     transition: .2s;
     cursor: default;
 }
